--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,6 +21,9 @@ jobs:
       with:
         node-version: 14.x
         cache: 'npm'
-    - run: npm install
-    - run: npm run test:unit
-    - run: echo "@nikolaislavchev"
+    - name: installing NPM 
+      run: npm install
+    - name: Running Unit Tests 
+      run: npm run test:unit
+    - name: Display Softuni username
+      run: echo "@nikolaislavchev"
