--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,7 +27,9 @@ jobs:
       run: npm run test:unit
     - name: Display Softuni username
       run: echo "@nikolaislavchev"
-
+  deploy:
+  runs-on: ubuntu-latest
+  needs: build
     - name: Deploy to production
       uses: johnbeynon/render-deploy-action@v0.0.8
       with:
